# massive-datasets-algorithms

.github/workflows/: rust.yml
sketches/: Cargo.toml  README.md
sketches/.github/workflows/: rust.yml
sketches/benches/: bloom_comparison.rs  bloom_throughput.rs  hasher_comparison.rs
sketches/examples/: bloom.rs
sketches/scripts/: run_benchmarks.sh
sketches/src/: lib.rs
sketches/src/benchmarks/: datasets.rs  mod.rs
sketches/src/filters/: mod.rs  traits.rs
sketches/src/filters/bloom/: mod.rs  standard.rs
sketches/src/hashing/: ahash_impl.rs  mod.rs  murmur3_impl.rs  traits.rs  xxhash_impl.rs
sketches/tests/filters/: bloom_accuracy.rs  bloom_edge_cases.rs  filter_properties.rs  mod.rs
